--- a/src/styles/sections/hero.css
+++ b/src/styles/sections/hero.css
@@ -196,7 +196,7 @@
 @media (max-width: 767px) {
   .hero-image-wrapper {
     margin-top: 8vw;
-    margin-bottom: -56vw;
+    margin-bottom: -68vw;
   }
 
   .hero-image-wrapper img {
